--- a/projects/guide/index.wxml
+++ b/projects/guide/index.wxml
@@ -1,7 +1,10 @@
 <swiper class="guide-swiper" indicator-dots="true">
     <block wx:for="{{imgUrls}}">
         <swiper-item>
-            <image src="{{item}}" class="slide-image" width="355" height="100%" />
+            <image src="{{item}}" class="slide-image" width="355" height="100%"></image>
+            <view class="guide-navigator-box">
+                <navigator class="guide-navigator-btn" wx:if="{{index == 2}}" redirect url="../../projects/home/index">点击跳转</navigator>
+            </view>   
         </swiper-item>
     </block>
 </swiper>
